lessons/155-istio-tutorial-service-mesh-ingress-gateway-virtual-service-gateway-ingress-mtls/1-example/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    monitoring: prometheus
    istio-injection: enabled
