lessons/155-istio-tutorial-service-mesh-ingress-gateway-virtual-service-gateway-ingress-mtls/1-example/3-myapp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: first-app
  namespace: staging
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: first-app
